--- a/properties/messages.properties
+++ b/properties/messages.properties
@@ -1,3 +1,4 @@
 empty.msisdn=El número no puede estar vacío.
 invalid.msisdn=Número inválido.
 invalid.carrier=Operador inválido.
+empty.subscription=No existe una suscripción asociada.
